<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    android:orientation="vertical"
    tools:context=".DataTekanan">

    <TextView
        android:id="@+id/Pompa"
        android:layout_width="62dp"
        android:layout_height="20dp"
        android:text="@string/pompa"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dataTekanan"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Tekanan"
        app:layout_constraintTop_toBottomOf="@+id/Tekanan"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/Nama"
        android:layout_width="56dp"
        android:layout_height="22dp"
        android:text="@string/nama"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/Status"
        android:layout_width="61dp"
        android:layout_height="18dp"
        android:text="@string/status"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Nama"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Nama"
        app:layout_constraintTop_toBottomOf="@+id/Nama"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/Tekanan"
        android:layout_width="76dp"
        android:layout_height="21dp"
        android:layout_marginTop="16dp"
        android:text="@string/tekanan"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Status"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Status"
        app:layout_constraintTop_toBottomOf="@+id/Status"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dataNama"
        android:layout_width="110dp"
        android:layout_height="22dp"
        android:layout_alignStart="@+id/Nama"
        android:layout_alignLeft="@+id/Nama"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Nama"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/dataStatus"
        android:layout_width="147dp"
        android:layout_height="19dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Status"
        app:layout_constraintTop_toBottomOf="@+id/dataNama"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/dataTekanan"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Tekanan"
        android:layout_alignLeft="@+id/Tekanan"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Tekanan"
        app:layout_constraintTop_toBottomOf="@+id/dataStatus"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/dataPompa"
        android:layout_width="125dp"
        android:layout_height="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Pompa"
        app:layout_constraintTop_toBottomOf="@+id/dataTekanan"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datalog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>